Created a class for the SimulationRunner. Made some minor changes in the DashboardController.